# uni-projects

cpp-projects-2022/oj/: oj10.cpp  oj15.cpp  oj16.cpp  oj17.cpp  oj18.cpp  oj19.cpp  oj2.cpp  oj22.cpp  oj23.cpp  oj25.cpp  oj27.cpp  oj30.cpp  oj31.cpp  oj32.cpp  oj34.cpp  oj35.cpp  oj5.cpp  oj6.cpp  oj7.cpp  oj8.cpp  oj9.cpp
cpp-projects-2022/pain1/: BigIntException.h  Doxyfile  big_int_main.cpp
cpp-projects-2022/pain2/: test.cpp
cpp-projects-2022/pain3/: decode.cpp  decoded_text.txt  (+2 more)
personal-git-repo-alimkanova-t-auca-2022-main/: CMakeLists.txt
personal-git-repo-alimkanova-t-auca-2022-main/extra/translation/URI1168/: URI1168.cpp
personal-git-repo-alimkanova-t-auca-2022-main/extra/translation/URI1241/: URI1241.java
personal-git-repo-alimkanova-t-auca-2022-main/extra/translation/URI1558/: URI1558.cpp  URI1558.java
personal-git-repo-alimkanova-t-auca-2022-main/oj/: oj1.cpp  oj11.cpp  oj12.cpp  oj13.cpp  oj14.cpp  oj20.cpp  oj21.cpp  oj24.cpp  oj28.cpp  oj29.cpp  oj3.cpp  oj33.cpp  oj36.cpp  oj4.cpp
personal-git-repo-alimkanova-t-auca-2022-main/pain1/: BigInt.h  BigIntException.cpp  BigInt_advanced_operations.cpp  BigInt_core.cpp  BigInt_helper_functions.cpp
personal-git-repo-alimkanova-t-auca-2022-main/pain2/: uno_game_main.cpp
personal-git-repo-alimkanova-t-auca-2022-main/pain2/Controller/: Logic.cpp
personal-git-repo-alimkanova-t-auca-2022-main/pain2/Model/: Action_cards.h  Color_of_cards.h  Computer.h  Number_cards.h  Person.cpp  Type_of_cards.h  Wild_cards.h
personal-git-repo-alimkanova-t-auca-2022-main/pain3/: encode.cpp  ex_text.txt
(+118 files in other folders)
